# pulsarFinder

./: Makefile  Makefile.in  README.md  configure  configure.ac
examples/PFinder/: runPF_0301.cfg
examples/config/: 0007+73_info  0007+73_mainConfig.cff  0007+73_scanParam.cff  0301+19_scan.cff  0301+19_scanParam.cff  0357+32_scanParam.cff  0622+37_scanParam.cff  0834+06_scanParam.cff  1112+50_info  1112+50_scanParam.cff  1133_scanParam.cff  1237+25_info  1237+25_scanParam.cff  2030+36_scanParam.cff  2032+41_scanParam.cff  2055+25_scanParam.cff  mainConfig_0007.cff  mainConfig_0007_test.cff  mainConfig_0301.cff  mainConfig_0357.cff  mainConfig_0622.cff  mainConfig_0622_250912_DM26.cff  mainConfig_0622_test.cff  mainConfig_0834.cff  mainConfig_1133.cff  mainConfig_2030.cff  mainConfig_2030_test.cff  mainConfig_2032_few_MACtest.cff
include/: DMAnalysis.h  DMAnalysis.h~  DMScan.h  DMScan.h~  PFAnalysis.h  PFRun.h  PFScan.h  thread_iface.h
src/: DMAnalysis_cppfunc.cc  DMAnalysis_cppfunc.cc~  DMScan_cppfunc.cc  DMScan_cppfunc.cc~  DMScan_cudafunc.cu  DMScan_cudafunc.cu~  Makefile  Makefile.am  Makefile.in  PFAnalysis.cc  PFRun.cc  PFScan_InitClose.cc  PFScan_ProcessCPU.cc  readRAW.cc  runPFinder.cc  run_dman.cc  run_dman.cc~  run_dmscan.cc  run_dmscan.cc~
src/cuda/: DMScan_cudafunc.cu  Makefile  Makefile.am  Makefile.in  PFScan_ProcessGPU.cu
